--- a/app.json
+++ b/app.json
@@ -10,5 +10,19 @@
     "delete",
     "bot"
   ],
+    "env": {
+      "ID": {
+        "description": "Your app id",
+        "value": ""
+      },
+     "HASH": {
+        "description": "Your Api hash",
+        "value": ""
+      },
+     "TOKEN": {
+        "description": "Your bot token",
+        "value": ""
+      }
+    }
 
 }
